// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`golden: fixture → wiktionary (offline) > basic-verb Greek lexeme 1`] = `
[
  {
    "etymology": {
      "chain": [
        {
          "relation": "inherited",
          "source_lang": "grc",
          "term": "γράφω",
        },
        {
          "relation": "inherited",
          "source_lang": "grc",
          "term": "γράφω",
        },
      ],
    },
    "form": "golden-basic-verb",
    "hyphenation": [
      "γρά",
      "φω",
    ],
    "language": "el",
    "part_of_speech": "verb",
    "semantic_relations": {
      "antonyms": [
        "σβήνω",
      ],
      "synonyms": [
        "σημειώνω",
        "καταγράφω",
      ],
    },
    "senses": [
      {
        "gloss": "to write",
        "subsenses": [
          {
            "gloss": "to write by hand",
          },
          {
            "gloss": "to type",
          },
        ],
      },
      {
        "gloss": "to record something",
        "subsenses": [],
      },
    ],
  },
]
`;

exports[`golden: fixture → wiktionary (offline) > form-of-inflected Greek INFLECTED_FORM 1`] = `
[
  {
    "form": "golden-form-of",
    "form_of": {
      "lang": "el",
      "lemma": "γράφω",
      "tags": [
        "1",
        "s",
        "pres",
        "ind",
        "act",
      ],
    },
    "language": "el",
    "type": "INFLECTED_FORM",
  },
]
`;

exports[`golden: fixture → wiktionary (offline) > nested-pipe-bug regression fixture 1`] = `
[
  {
    "etymology": undefined,
    "form": "golden-nested-pipe-bug",
    "hyphenation": undefined,
    "language": "el",
    "part_of_speech": "verb",
    "semantic_relations": undefined,
    "senses": [
      {
        "gloss": "test",
        "subsenses": [],
      },
    ],
  },
]
`;

exports[`golden: fixture → wiktionary (offline) > nested-templates parser stress fixture 1`] = `
[
  {
    "etymology": undefined,
    "form": "golden-nested-templates",
    "hyphenation": undefined,
    "language": "el",
    "part_of_speech": "verb",
    "semantic_relations": undefined,
    "senses": [
      {
        "gloss": "test",
        "subsenses": [],
      },
    ],
  },
]
`;

exports[`golden: fixture → wiktionary (offline) > translations-multi fixture 1`] = `
[
  {
    "etymology": undefined,
    "form": "golden-translations-multi",
    "hyphenation": undefined,
    "language": "el",
    "part_of_speech": "verb",
    "semantic_relations": undefined,
    "senses": [
      {
        "gloss": "to write",
        "subsenses": [],
      },
    ],
  },
]
`;

exports[`golden: fixture → wiktionary (offline) > γράφω rich Greek entry 1`] = `
[
  {
    "etymology": {
      "chain": [
        {
          "relation": "inherited",
          "source_lang": "grc",
          "term": "γράφω",
        },
        {
          "relation": "inherited",
          "source_lang": "grk-pro",
          "term": "*grəpʰō",
        },
        {
          "relation": "derived",
          "source_lang": "ine-pro",
          "term": "*gerbʰ-",
        },
      ],
    },
    "form": "γράφω",
    "hyphenation": [
      "γρά",
      "φω",
    ],
    "language": "el",
    "part_of_speech": "verb",
    "semantic_relations": {
      "antonyms": [
        "ξεγράφω",
      ],
      "synonyms": [
        "σημειώνω",
        "καταγράφω",
      ],
    },
    "senses": [
      {
        "gloss": "to write, pen",
        "subsenses": [],
      },
      {
        "gloss": "to record",
        "subsenses": [],
      },
      {
        "gloss": "to issue a ticket",
        "subsenses": [],
      },
    ],
  },
]
`;
